[package]
name = "neutrino"
version = "0.1.1"
authors = ["Alexis Lozano <alexis.pascal.lozano@gmail.com>"]
edition = "2018"
build = "build.rs"
description = "A GUI frontend in Rust based on web-view"
repository = "https://github.com/alexislozano/neutrino/"
license = "MIT"

[dependencies]
web-view = "0.4.1"
strfmt = "0.1.6"
base64 = "0.10.1"
json = "0.11.15"

[build-dependencies]
rsass = "0.11.0"
base64 = "0.10.1"