[package]
name = "neutrino"
version = "0.2.0"
authors = ["Alexis Lozano <alexis.pascal.lozano@gmail.com>"]
edition = "2018"
build = "build.rs"
description = "A GUI frontend in Rust based on web-view"
repository = "https://github.com/alexislozano/neutrino/"
license = "MIT"
categories = ["gui"]
keywords = ["gui", "desktop", "web", "mvc"]

[dependencies]
web-view = "0.4.1"
strfmt = "0.1.6"
base64 = "0.10.1"
json = "0.11.15"

[build-dependencies]
rsass = "0.11.0"
base64 = "0.10.1"
