[package]
name = "neutrino"
version = "0.4.0"
authors = ["Alexis Lozano <alexis.pascal.lozano@gmail.com>"]
edition = "2018"
build = "build.rs"
description = "A GUI frontend in Rust based on web-view"
repository = "https://github.com/alexislozano/neutrino/"
readme = "README.md"
license = "MIT"
categories = ["gui"]
keywords = ["gui", "desktop", "web", "mvc"]

[dependencies]
web-view = "~0.6.3"
strfmt = "~0.1.6"
base64 = "~0.12.1"
json = "~0.12.4"
rsass = "~0.13.0"
html-minifier = "~1.2.1"

[build-dependencies]
rsass = "~0.13.0"
base64 = "~0.12.1"
